add env vars to build

--- a/bookstore.yml
+++ b/bookstore.yml
@@ -2,30 +2,38 @@ version: '3.8'
 services:
   bookstore:
     image: bookstore
+    env_file:
+      - .env
     depends_on:
       bookstore-postgresql:
         condition: service_healthy
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:8080/actuator/health" ]
+      test: [ "CMD", "curl", "-f", "http://localhost:${RESOURCE_PORT}/actuator/health" ]
       interval: 10s
       timeout: 10s
       retries: 3
       start_period: 20s
     environment:
       - _JAVA_OPTIONS=-Xmx512m -Xms256m
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://bookstore-postgresql:5432/bookstore
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://bookstore-postgresql:${DB_PORT}/${DB_NAME}
+      - SPRING_DATASOURCE_USERNAME=${DB_USERNAME}
+      - SPRING_DATASOURCE_PASSWORD=${DB_PASSWORD}
     ports:
       - "8080:8080"
   bookstore-postgresql:
     image: postgres:latest
+    env_file:
+      - .env
     healthcheck:
-      test: [ "CMD", "pg_isready", "-d", "bookstore" ]
+      test: [ "CMD", "pg_isready", "-d", $DB_NAME, "-U", $DB_USERNAME]
       interval: 10s
       timeout: 10s
       retries: 3
       start_period: 10s
     environment:
-      - POSTGRES_USER=bookstore
-      - POSTGRES_PASSWORD=bookstore
+      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_USER=${DB_USERNAME}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
     ports:
       - "5432:5432"
+      - "5432:${DB_PORT}"
