--- a/resource/src/main/resources/application.yml
+++ b/resource/src/main/resources/application.yml
@@ -19,4 +19,10 @@ management:
       discovery:
         enabled: false
       exposure:
-        include: ['health']
+        include: [ 'health', 'info' ]
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:${DISCOVERY_PORT:8761}/eureka
+  instance:
+    preferIpAddress: true
