--- a/.env.template
+++ b/.env.template
@@ -3,6 +3,9 @@ DB_NAME=bookstore
 DB_USERNAME=bookstore
 DB_PASSWORD=bookstore
 
-RESOURCE_PORT=8080
+RESOURCE_PORT=8081
+
 DISCOVERY_SERVICE=bookstore-discovery
 DISCOVERY_PORT=8761
+
+GATEWAY_PORT=8080
