--- a/.env.template
+++ b/.env.template
@@ -9,3 +9,7 @@ DISCOVERY_SERVICE=bookstore-discovery
 DISCOVERY_PORT=8761
 
 GATEWAY_PORT=8080
+GATEWAY_CLIENT_ID=gateway
+GATEWAY_CLIENT_SECRET={bcrypt}$2a$12$ziXQ2sWTa9TUQhthssKyR.QaPoNIQ8F4YlQoN6QhCEyZ/HTCJ9s66
+
+AUTH_SERVER_PORT=8082
