--- a/.env.template
+++ b/.env.template
@@ -5,8 +5,11 @@ DB_PASSWORD=bookstore
 
 RESOURCE_PORT=8081
 
-DISCOVERY_SERVICE=bookstore-discovery
+DISCOVERY_SERVICE=discovery
 DISCOVERY_PORT=8761
+DISCOVERY_USERNAME=admin
+DISCOVERY_PASSWORD={bcrypt}$$2a$$12$$6T9c7VgTFYHmLMofNVT1H.QhIk9FueYIOjVrtMETvMGWs.2PjQHjG
+DISCOVERY_SERVICE_URL=http://${DISCOVERY_SERVICE}:${DISCOVERY_PORT}/eureka
 
 GATEWAY_PORT=8080
 GATEWAY_CLIENT_ID=gateway
