--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -31,6 +31,6 @@ eureka:
   client:
     enabled: true
     serviceUrl:
-      defaultZone: http://${DISCOVERY_SERVICE:localhost}:${DISCOVERY_PORT:8761}/eureka
+      defaultZone: ${DISCOVERY_SERVICE:http://client:client@localhost:8761/eureka}
   instance:
     preferIpAddress: true
