--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -8,7 +8,6 @@ spring:
       discovery:
         locator:
           enabled: true
-          locator:
           lowerCaseServiceId: true
 management:
   metrics:
@@ -22,6 +21,6 @@ management:
 eureka:
   client:
     serviceUrl:
-      defaultZone: ${DISCOVERY_SERVICE:http://client:client@localhost:8761/eureka}
+      defaultZone: ${DISCOVERY_SERVICE_URL:http://client:client@localhost:8761/eureka}
   instance:
     preferIpAddress: true
