--- a/.env.template
+++ b/.env.template
@@ -13,6 +13,5 @@ DISCOVERY_SERVICE_URL=http://${DISCOVERY_SERVICE}:${DISCOVERY_PORT}/eureka
 
 GATEWAY_PORT=8080
 GATEWAY_CLIENT_ID=gateway
-GATEWAY_CLIENT_SECRET={bcrypt}$2a$12$ziXQ2sWTa9TUQhthssKyR.QaPoNIQ8F4YlQoN6QhCEyZ/HTCJ9s66
-
+GATEWAY_CLIENT_SECRET={bcrypt}$$2a$$12$$dinup5AmONVF9Z87wrbA5uozgP9VMq/.T1hFd1pGP1o3sbwHOyH8i
 AUTH_SERVER_PORT=8082
