--- a/.env.template
+++ b/.env.template
@@ -10,6 +10,8 @@ DISCOVERY_PORT=8761
 DISCOVERY_USERNAME=admin
 DISCOVERY_PASSWORD={bcrypt}$$2a$$12$$6T9c7VgTFYHmLMofNVT1H.QhIk9FueYIOjVrtMETvMGWs.2PjQHjG
 DISCOVERY_SERVICE_URL=http://${DISCOVERY_SERVICE}:${DISCOVERY_PORT}/eureka
+DISCOVERY_DOCKER_SERVICE_NAME=bookstore-${DISCOVERY_SERVICE}
+DISCOVERY_SERVICE_URL=http://${DISCOVERY_DOCKER_SERVICE_NAME}:${DISCOVERY_PORT}/eureka
 
 GATEWAY_PORT=8080
 GATEWAY_CLIENT_ID=gateway
