--- a/.env.template
+++ b/.env.template
@@ -8,12 +8,11 @@ RESOURCE_PORT=8081
 DISCOVERY_SERVICE=discovery
 DISCOVERY_PORT=8761
 DISCOVERY_USERNAME=admin
-DISCOVERY_PASSWORD={bcrypt}$$2a$$12$$6T9c7VgTFYHmLMofNVT1H.QhIk9FueYIOjVrtMETvMGWs.2PjQHjG
-DISCOVERY_SERVICE_URL=http://${DISCOVERY_SERVICE}:${DISCOVERY_PORT}/eureka
+DISCOVERY_PASSWORD={bcrypt}$$2a$$12$$3.pJtA4oPQ7iNQDabJ5iTO96dBEDWyzjzb0Zh2iLBWwsHmAk33fyy
 DISCOVERY_DOCKER_SERVICE_NAME=bookstore-${DISCOVERY_SERVICE}
 DISCOVERY_SERVICE_URL=http://${DISCOVERY_DOCKER_SERVICE_NAME}:${DISCOVERY_PORT}/eureka
 
 GATEWAY_PORT=8080
 GATEWAY_CLIENT_ID=gateway
-GATEWAY_CLIENT_SECRET={bcrypt}$$2a$$12$$dinup5AmONVF9Z87wrbA5uozgP9VMq/.T1hFd1pGP1o3sbwHOyH8i
+GATEWAY_CLIENT_SECRET={bcrypt}$$2a$$12$$xCObAnSW.osUET.QQCHOlOzTUKjDjF1KI9LstUH6STBwPspvNo/W.
 AUTH_SERVER_PORT=8082
